k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: big-bus
  labels:
    name: big-bus
    environment: production
